@@ -1,12 +1,13 @@
+
 <div align="center">
 
-<img src="./assets/banner.png" alt="Agent Memento Banner" width="100%">
+<img src="./docs/assets/banner.png" alt="Agent Memento Banner" width="100%">
 
 # 🧠 Agent Memento
 
-**Tick-Driven Autonomous Production Factory for LLMs**
+**Your AI agent forgets everything every 5 minutes. That's the point.**
 
-*“Don't build AI that tries to remember everything. Build systems that make AI read the blueprint anew every 5 minutes.”*
+A tick-driven autonomous execution framework that turns any LLM into a reliable production factory — by embracing amnesia instead of fighting it.
 
 [![OpenClaw Skill](https://img.shields.io/badge/OpenClaw-Skill-blue.svg)](https://github.com/openclaw/openclaw)
 [![ClawHub](https://img.shields.io/badge/ClawHub-Install-ff69b4.svg)](https://clawhub.com/yangwenyu2/agent-memento)
@@ -16,72 +17,91 @@
 
 </div>
 
----
 
-## ⚡ The "Aha!" Problem: Chat Windows Can't Build Aircraft Carriers
+> Inspired by the film *Memento*: if you can't form new memories, 
+> tattoo the instructions on your body.
 
-You ask an AI Agent to build a massive project. The first 10 minutes are magic. But by line 2,000, the magic rots into a nightmare:
-- **Context Amnesia:** The AI forgets the architecture it designed an hour ago and hallucinates non-existent APIs.
-- **The "LGTM" Delusion:** The AI confidently tells you "I fixed the bug," but the code doesn't even compile.
-- **The OOM Nuke:** To fix a typo in a 3,000-line file, the AI tries to rewrite the *entire file* in one message, blowing up the context window, causing Out-Of-Memory (OOM) crashes, and taking down your entire gateway.
 
-**Continuous chatbots are engineering poison for long-term generation.**
+> ⚠️ **Security & Risk Warning**:
+> This skill deploys a highly privileged autonomous shell pipeline. Please read carefully before initializing:
+> 1. **Arbitrary Command Execution**: The core Tick Engine (`memento_tick.sh`) strictly and autonomously executes commands defined in the `verify` field of your `MASTER_PLAN.md`. Always run this system in an isolated Virtual Machine or Sandbox environment to prevent unintended side effects.
+> 2. **Automated Git Rollbacks**: On task failure, the system executes `git checkout -- .` and `git stash push -u` to revert the workspace to a clean state. **Never initialize Memento in a directory containing pre-existing valuable files or untracked manual edits**, as they may be inadvertently stashed or overwritten.
+> 3. **Optional HTTP Directory Exposure**: The companion Dashboard can run a Node.js web server to statically mount and serve your entire project directory via the `/preview` endpoint (if started with `--enable-preview`). **Do not place API keys, secrets, or sensitive private files in the project directory**.
 
-## 💡 The Solution: Memento Execution 
 
-Inspired by the movie *Memento*, we destroy the omniscient, memory-heavy persistent Agent.
-We replace it with an army of **ruthless, amnesiac, short-lived Tick Workers** that live only to read a physical blueprint, hammer exactly one nail, verify it, and die.
 
-### ⚙️ How Memento Works (The Dual-Mode Intelligence)
-| Mode | Actor | Role | Memory |
-| :--- | :--- | :--- | :--- |
-| **🏛️ The Architect** | You + Chat AI | Design macro-architecture, pivot strategies, and write checklists into `MASTER_PLAN.md`. | Infinite (Human Brain) |
-| **🔨 The Tick Worker** | Cron / Watchdog | Wakes up every 5 mins, reads the blueprint, executes ONE `[ ]` task, proves it works, and dies. | 5 Minutes (Zero Context) |
+## The Problem
 
-#### Three Ironclad Disciplines enforced by Memento:
-1. **Surgical Edits (Anti-OOM)**: Forced to use `sed` or AST parsing instead of rewriting entire files.
-2. **Evidence-Based (Anti-Hallucination)**: Strictly forbidden from checking off `[x]` unless physical proof exists (a passing `jest` test, a returning `curl` 200 OK, etc.).
-3. **Anti-Ghosting (Asynchronous Reporting)**: If stuck, it writes the blocker into a `TICK_STATUS.md` blackbox instead of silently dying.
+Every AI coding agent hits the same wall:
 
-### 🕹️ Observable Steering (Zero-Prompt Intervention)
-Tired of yelling at your AI in the chat, *"No! You wrote it wrong again!"*? 
-With Agent Memento, you steer the entire autonomous process simply by editing a text file. Want to pivot the app's entire UI? Just silently change the checkboxes in `MASTER_PLAN.md`. The next Tick Worker will instantly adapt to the new reality like a river changing course.
+| Without Memento | With Memento |
+|----------------|--------------|
+| 🧠 "I'll remember the whole project" | 📋 "I'll read the blueprint fresh each time" |
+| 💀 OOM at 2000 lines | ✅ Built a 15,000-line app overnight |
+| 🎭 Hallucinates after 30 min | 🔬 Every change verified by real tests |
+| 🔄 Rewrites your files from scratch | 🔪 Surgical edits only, always |
 
----
+## How It Works
 
-## 🚀 Quick Start (One-Line Scaffold)
+![Agent Memento Architecture](docs/assets/architecture.png)
 
-Instantly tear down the Chatbot paradigm and spin up an autonomous Memento factory inside OpenClaw:
 
-### 1. Install from ClawHub
-```bash
-clawhub install agent-memento
-```
+1. **You** describe what you want in natural language
+2. **The Architect** (your main AI session) breaks it into a checklist
+3. **Tick Workers** wake up every 5 minutes via cron, pick the next `[ ]`, do the work, run tests, and check it off `[x]`
+4. If stuck → flag it `[!]` → Architect adjusts → loop continues
+5. You check the Dashboard when you feel like it. Or don't.
 
-### 2. Initialize a Project
-```bash
-cd ~/.openclaw/workspace
-bash skills/agent-memento/scripts/init_memento.sh MyHugeProject
-```
 
-This automagically injects:
-1. `projects/MyHugeProject/docs/MASTER_PLAN.md` (Your physical canvas for global architecture).
-2. `TICK_STATUS.md` (The asynchronous Black Box where dying Workers report their blockers).
-3. A **ready-to-deploy background worker script** at `scripts/MyHugeProject_tick.sh` loaded with draconian system prompts.
+## Key Features
 
-### 3. Unleash the Cron
-Write out your plan in `MASTER_PLAN.md`, then add the tick to your system crontab:
-```bash
-*/5 * * * * bash /root/.openclaw/workspace/scripts/MyHugeProject_tick.sh
-```
+*   **⚡️ Tick-Driven Architecture**: Runs autonomously in the background via `cron` or a loop script. It spins up short-lived, pinpoint-accurate Tick Workers to perform atomic tasks.
+*   **🛡️ Iron Discipline & Fallback**: Each worker is forced to run a `verify` command after modifying code. If it returns anything other than `Exit 0`, the system triggers an aggressive 3-phase git rollback (checkout, clean, stash) to guarantee no dirty code ever pollutes the main branch.
+*   **🎨 Staff-Level Craftsmanship Profile**: Tick Workers are injected with a high-standard Persona prompt demanding elegant UI/UX, responsive design, animations, and robust asset handling. No more ugly, raw "gray box" Proof-of-Concept outputs.
+*   **📺 Holographic Mission Dashboard**: A Node.js web monitor to track your AI's building process.
+    *   **▶ Live Preview**: Instantly mounts your HTML5/Web project directory so you can test and play the generated app *while* the AI is coding it.
+    *   **📊 Robust Progress Sync**: A progress bar heavily fortified by Regex that accurately parses the `[x]` checks in the real markdown file.
+    *   **💬 Read-Only Observer Console**: Talk to the dashboard Architect to get an instant summary of the project without risking jailbreaks or unprompted codebase edits.
+*   **🌏 Native Bilingual**: Seamlessly adapts to English or Chinese (or any language) based purely on your `MASTER_PLAN.md` context.
 
-**Wake up to a finished project, built brick by verified brick.**
+## Quick Start (30 Seconds)
 
----
+1. Initialize project scaffolding:
+   ```bash
+   bash skills/agent-memento/scripts/init_memento.sh MyProject
+   ```
 
-## 🛠 Prerequisites
-- [OpenClaw CLI](https://github.com/openclaw/openclaw) properly installed.
-- (Optional but Recommended) A testing harness (Jest, PyTest, etc.) so the worker can strictly adhere to the Evidence-based standard.
+2. Have your Architect (main session LLM) draft the `MASTER_PLAN.md` and `PROJECT_MAP.md`
 
-## 📜 License
-MIT License.
+3. Wire it to crontab:
+   ```bash
+   crontab -e
+   # Add: */5 * * * * /path/to/MyProject/scripts/memento_tick.sh
+   ```
+
+4. Monitor via real-time Mission Control Dashboard:
+   ```bash
+   bash skills/agent-memento/scripts/dashboard.sh
+   ```
+
+## How is this different?
+
+| Feature | Agent Memento | AutoGPT / CrewAI | Cursor / Copilot | Devin |
+|---|---|---|---|---|
+| Memory model | Stateless ticks | In-memory loop | Session context | Persistent agent |
+| Fails at scale? | No (by design) | Yes (OOM/drift) | Yes (context limit) | Unclear |
+| Verification | Mandatory per task | Optional | None | Internal |
+| Human oversight | Async dashboard | Real-time babysitting | Inline | Web UI |
+| Runs overnight? | ✅ | ❌ | ❌ | ✅ |
+| Fully local? | ✅ | ❌ | ❌ | ❌ |
+
+## Philosophy
+
+> "The best AI system is one that assumes it will forget everything, and builds the world around that assumption."
+
+Agent Memento doesn't make AI smarter. It makes AI *reliable* — by giving it a notebook it can't lose, a checklist it must follow, and a reset switch every 5 minutes.
+
+## Documentation
+- See [SKILL.md](./SKILL.md) for full technical architecture and execution rules.
+- Contains Node/Express based real-time monitoring WebUI hooks (`/dashboard`).
+
